--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -18,5 +18,41 @@
   },
   "hero": {
     "diagramAlt": "Кругова діаграма Ten-Factors"
+  },
+  "footer": {
+    "description": "Вимірюйте та покращуйте ефективність доставки програмного забезпечення за допомогою нашого комплексного інструменту оцінювання.",
+    "product": "Продукт",
+    "features": "Можливості",
+    "pricing": "Ціни",
+    "documentation": "Документація",
+    "company": "Компанія",
+    "about": "Про нас",
+    "blog": "Блог",
+    "careers": "Кар'єра",
+    "support": "Підтримка",
+    "helpCenter": "Центр допомоги",
+    "contact": "Контакт",
+    "privacyPolicy": "Політика конфіденційності",
+    "cookieDeclaration": "Політика Cookie",
+    "rightsReserved": "Всі права захищені.",
+    "newsletter": {
+      "title": "Підпишіться на нашу розсилку",
+      "subtitle": "Отримуйте оновлення продукту, найкращі практики та інсайти на свою пошту.",
+      "emailLabel": "Електронна пошта",
+      "placeholder": "Вкажіть свою пошту",
+      "submit": "Підписатися"
+    }
+  }
+  ,
+  "usage": {
+    "title": "Як це працює",
+    "subtitle": "Оцініть, проаналізуйте та покращуйте ефективність доставки ПЗ у чотири прості кроки.",
+    "cta": "Почати",
+    "steps": {
+      "1": { "title": "Дайте відповіді", "desc": "Заповніть коротке опитування за десятьма факторами, щоб оцінити поточні практики." },
+      "2": { "title": "Отримайте оцінку", "desc": "Миттєво отримайте детальну оцінку зі сильними сторонами та зонами для покращення." },
+      "3": { "title": "Перегляньте найкращі практики", "desc": "Ознайомтесь із практичними рекомендаціями та найкращими практиками, адаптованими до ваших результатів." },
+      "4": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." }
+    }
   }
 }
