--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -52,7 +52,8 @@
       "1": { "title": "Дайте відповіді", "desc": "Заповніть коротке опитування за десятьма факторами, щоб оцінити поточні практики." },
       "2": { "title": "Отримайте оцінку", "desc": "Миттєво отримайте детальну оцінку зі сильними сторонами та зонами для покращення." },
       "3": { "title": "Перегляньте найкращі практики", "desc": "Ознайомтесь із практичними рекомендаціями та найкращими практиками, адаптованими до ваших результатів." },
-      "4": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." }
+      "4": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." },
+      "5": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." }
     }
   }
 }
