--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -55,5 +55,36 @@
       "4": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." },
       "5": { "title": "Відстежуйте покращення", "desc": "Впроваджуйте зміни та відстежуйте прогрес з часом для безперервного покращення." }
     }
+  },
+  "caseStudies": {
+    "title": "Кейси",
+    "subtitle": "Дізнайтесь, як команди покращили продуктивність доставки з Ten-Factors.",
+    "readMore": "Детальніше",
+    "items": {
+      "1": {
+        "company": "Acme Corp",
+        "title": "Прискорений цикл релізів",
+        "summary": "Зосередившись на автоматизації деплойменту та CI, Acme скоротила час виконання і підвищила якість.",
+        "result": "+35% швидші релізи"
+      },
+      "2": {
+        "company": "Globex",
+        "title": "Стабільність і швидкість разом",
+        "summary": "Покращене реагування на інциденти та управління змінами зменшили кількість збоїв і прискорили відновлення.",
+        "result": "-40% інцидентів"
+      },
+      "3": {
+        "company": "Initech",
+        "title": "Від ручного до автоматизованого",
+        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку.",
+        "result": "+50% покриття тестами"
+      },
+      "4": {
+        "company": "Initech",
+        "title": "Від ручного до автоматизованого",
+        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку.",
+        "result": "+50% покриття тестами"
+      }
+    }
   }
 }
