--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -86,5 +86,39 @@
         "result": "+50% покриття тестами"
       }
     }
+  },
+  "testimonials": {
+    "title": "Відгуки",
+    "subtitle": "Дізнайтесь, як Ten-Factors змінив якість програмного забезпечення для компаній різного розміру та галузей.",
+    "items": {
+      "1": {
+        "quote": "Ten-Factors дав нам чітке розуміння вузьких місць у доставці та де варто зосередитись першочергово.",
+        "name": "Сара Лі",
+        "role": "Керівниця інженерної команди",
+        "flag": "🇺🇸",
+        "company": "Acme Corp"
+      },
+      "2": {
+        "quote": "Наш час відновлення покращився, бо ми нарешті почали вимірювати та відстежувати правильні практики.",
+        "name": "Мігель Сантос",
+        "role": "Інженер з надійності",
+        "flag": "🇵🇹",
+        "company": "Globex"
+      },
+      "3": {
+        "quote": "Просто, практично і вимірювано. Це допомогло узгодити цілі продукту та інженерії.",
+        "name": "Анна Петров",
+        "role": "Керівниця продукту",
+        "flag": "🇺🇦",
+        "company": "Initech"
+      },
+      "4": {
+        "quote": "Оцінювання показало швидкі перемоги. За кілька тижнів ми побачили менше інцидентів і швидші релізи.",
+        "name": "Джеймс Кім",
+        "role": "Лід DevOps",
+        "flag": "🇰🇷",
+        "company": "Umbrella"
+      }
+    }
   }
 }
