feat: add CTA section

--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -120,5 +120,10 @@
         "company": "Umbrella"
       }
     }
+  },
+  "ctaSection": {
+    "title": "Готові спробувати Ten-Factors?",
+    "subtitle": "Почніть вимірювати та покращувати якість свого програмного забезпечення вже сьогодні.",
+    "primary": "Почати зараз"
   }
 }
