--- a/ten-factors-new/src/locales/en/common.json
+++ b/ten-factors-new/src/locales/en/common.json
@@ -120,5 +120,10 @@
         "company": "Umbrella"
       }
     }
+  },
+  "ctaSection": {
+    "title": "Ready to try Ten-Factors?",
+    "subtitle": "Start measuring and improving your software quality today.",
+    "primary": "Get Started Now"
   }
 }
