fix: CaseStudies card style

--- a/ten-factors-new/src/locales/en/common.json
+++ b/ten-factors-new/src/locales/en/common.json
@@ -64,14 +64,12 @@
       "1": {
         "company": "Acme Corp",
         "title": "Accelerated release cadence",
-        "summary": "By focusing on deployment automation and CI, Acme reduced lead time while increasing quality.",
-        "result": "+35% faster releases"
+        "summary": "By focusing on deployment automation and CI, Acme reduced lead time while increasing quality."
       },
       "2": {
         "company": "Globex",
         "title": "Stability and speed together",
-        "summary": "Improved incident response and change management brought fewer failures with quicker recovery.",
-        "result": "-40% incidents"
+        "summary": "Improved incident response and change management brought fewer failures with quicker recovery."
       },
       "3": {
         "company": "Initech",
@@ -82,8 +80,7 @@
       "4": {
         "company": "Initech",
         "title": "From manual to automated",
-        "summary": "Migrating to trunk-based development and automated tests unlocked consistent delivery.",
-        "result": "+50% test coverage"
+        "summary": "Migrating to trunk-based development and automated tests unlocked consistent delivery."
       }
     }
   },
