--- a/ten-factors-new/src/locales/uk/common.json
+++ b/ten-factors-new/src/locales/uk/common.json
@@ -64,26 +64,22 @@
       "1": {
         "company": "Acme Corp",
         "title": "Прискорений цикл релізів",
-        "summary": "Зосередившись на автоматизації деплойменту та CI, Acme скоротила час виконання і підвищила якість.",
-        "result": "+35% швидші релізи"
+        "summary": "Зосередившись на автоматизації деплойменту та CI, Acme скоротила час виконання і підвищила якість."
       },
       "2": {
         "company": "Globex",
         "title": "Стабільність і швидкість разом",
-        "summary": "Покращене реагування на інциденти та управління змінами зменшили кількість збоїв і прискорили відновлення.",
-        "result": "-40% інцидентів"
+        "summary": "Покращене реагування на інциденти та управління змінами зменшили кількість збоїв і прискорили відновлення."
       },
       "3": {
         "company": "Initech",
         "title": "Від ручного до автоматизованого",
-        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку.",
-        "result": "+50% покриття тестами"
+        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку."
       },
       "4": {
         "company": "Initech",
         "title": "Від ручного до автоматизованого",
-        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку.",
-        "result": "+50% покриття тестами"
+        "summary": "Перехід на trunk-based розробку та автотести забезпечив стабільну доставку."
       }
     }
   },
